-----------------------------
 Change history for MATPOWER
-----------------------------

Version:    5.0

maintained by Ray Zimmerman <rz10@cornell.edu>

MATPOWER
$Id$
Copyright (c) 1996-2014 by Power System Engineering Research Center (PSERC)
See http://www.pserc.cornell.edu/matpower/ for more info.


Changes since 5.0
-----------------

1/22/15
    - Added ability to toggle the availability of optional functionality
      using have_fcn().

1/21/15
    - Fixed minor bug with poly2pwl(), affecting units with Pmax <= 0.
    - Major update to have_fcn(), which now determines and caches
      version numbers and release dates for optional packages, used
      by mpver() and others.
    - Fixed error in qps_mosek() in printout of selected optimizer
      when using MOSEK 7.

1/16/15
    - Cleaned up and improved consistency of output in printpf() for
      generation and dispatchable load constraints.
    - Modified runcpf() to gracefully handle the case when the base
      and target cases are identical (as opposed to getting lost in
      an infinite loop).

1/15/15
    - Fixed bug in handling of interface flow limits, where multipliers
      on binding interface flow limits were off by a factor of the p.u.
      MVA base.
    - Fixed sign error on multipliers on lower bound on constraints
      in qps_clp() and qps_glpk(). Modified a test in t_qps_matpower()
      to check for this.

1/14/15
    - Added support for LP/QP solver CLP (COIN_OR Linear Programming).
      Use 'opf.dc.solver' option 'CLP' or qps_clp().
    - Added note to README and home page about OPTI Toolbox by
      Jonathan Currie being an easy way to install some good solvers
      for Windows users.

1/13/15
    - Updated t_opf_dc_ot() to remove the skipping of the checking of
      price results for the dual-simplex algorithm for all versions of
      Matlab except R2014b, the first version that included the
      dual-simplex algorthm. For some reason, in this version it did